syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.routeguide";
option java_outer_classname = "RouteGuideProto";

package grpc_pb;


service Simple {
  rpc Status(StatusRequest) returns (StatusReply) {}
}

message StatusRequest {}

message StatusReply {
    string msg = 1;
    string err = 2;
}
